--- a/NotepadSharp/Form1.resx
+++ b/NotepadSharp/Form1.resx
@@ -123,23 +123,6 @@
   <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>702, 17</value>
   </metadata>
-  <data name="newtext.Text" xml:space="preserve">
-    <value>Stuff that works:
-• Code Highlighting for all languages except Java and INNO
-• Updater
-• Multiple Tabs
-• Closing Tabs
-• Saving Files
-• Opening Files
-• Various little stuff(Copying, Cutting, etc)
-
-Stuff that needs to be fixed
-• Opening stuff in other tabs
-• saving stuff from other tabs
-• Closing all but active tab function
-• Specific files extensions in Open file and save file dialogs
-• Printing</value>
-  </data>
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>366, 17</value>
   </metadata>
@@ -151,6 +134,9 @@ Stuff that needs to be fixed
   </metadata>
   <metadata name="openFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>236, 17</value>
+  </metadata>
+  <metadata name="printDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>847, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
